--- a/Front End/Operation Keyword/SeoFrontEnd/Views/Shared/_Layout.cshtml
+++ b/Front End/Operation Keyword/SeoFrontEnd/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                          <nav>
                             <ul id="menu">
                                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                <li>@Html.ActionLink("Manage Website", "Configure", "Account")</li>
+                                <li>@Html.ActionLink("Manage Website", "Website", "Account")</li>
                                 <li>@Html.ActionLink("Keyword Ranking", "KeywordRanking", "Account")</li>
                                 <li>@Html.ActionLink("About", "About", "Home")</li>
                                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
