--- a/Front End/Operation Keyword/SeoFrontEnd/Views/Shared/_LayoutAccount.cshtml
+++ b/Front End/Operation Keyword/SeoFrontEnd/Views/Shared/_LayoutAccount.cshtml
@@ -13,11 +13,8 @@
         <div class="inner">
             <h1 id="logo">scanner</h1>
             <ul id="shortcuts">
-                <li><a href="http://testier.invoicemachine.com/upgrade">Upgrade</a></li>
+                
                 <li><a href="http://testier.invoicemachine.com/account">Account</a></li>
-                <li><a href="http://testier.invoicemachine.com/settings">Settings</a></li>
-                <li><a href="http://testier.invoicemachine.com/users">Users</a></li>
-                <li><a href="http://testier.invoicemachine.com/profile">Profile</a></li>
                 <li><a class="blank" href="http://invoicemachine.com/help">Help</a></li>
 
                 <li>
@@ -33,9 +30,7 @@
             <ul id="navigation">
                 <li>@Html.ActionLink("Website", "Website", "Account", new { @class = "current" })</li>
                 <li>@Html.ActionLink("Keywords", "configure", "Account")</li>
-                <li><a href="http://testier.invoicemachine.com/recurring">Recurring</a></li>
-                <li><a href="http://testier.invoicemachine.com/projects">Projects</a></li>
-                <li><a href="http://testier.invoicemachine.com/clients">Clients</a></li>
+                <li>@Html.ActionLink("Reports", "Reports", "Account")</li>
             </ul>
         </div>
     </div>
